--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "UI Library for Mass Dono",
   "main": "build/index.js",
- "module": "build/index.es.js",
- "jsnext:main": "build/index.es.js",
+  "module": "build/index.es.js",
+  "jsnext:main": "build/index.es.js",
   "author": "Enrico Valbuena",
   "license": "MIT",
   "scripts": {
@@ -13,7 +13,14 @@
   },
   "devDependencies": {
     "@types/jest": "^24.9.1",
+    "@types/react": "^16.9.19",
+    "@types/react-dom": "^16.9.5",
+    "@types/react-test-renderer": "^16.9.2",
     "jest": "^25.1.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-scripts-ts": "^3.1.0",
+    "react-test-renderer": "^16.12.0",
     "rollup": "^1.29.1",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
@@ -22,8 +29,16 @@
     "ts-jest": "^25.0.0",
     "typescript": "^3.7.5"
   },
+  "peerDependencies": {
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0"
+  },
   "jest": {
     "preset": "ts-jest",
     "testEnvironment": "node"
-  }
+  },
+
+  "files": [
+    "build"
+  ]
 }
