--- a/package.json
+++ b/package.json
@@ -8,26 +8,42 @@
   "author": "Enrico Valbuena",
   "license": "MIT",
   "scripts": {
-    "build": "rollup -c",
-    "test": "jest"
+    "clean": "rimraf ./build",
+    "roll": "rollup -c",
+    "build": "yarn clean && yarn roll",
+    "test": "jest",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "devDependencies": {
+    "@babel/core": "^7.8.3",
+    "@storybook/addon-actions": "^5.3.8",
+    "@storybook/addon-links": "^5.3.8",
+    "@storybook/addons": "^5.3.8",
+    "@storybook/react": "^5.3.8",
     "@types/jest": "^24.9.1",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
+    "@types/react-native": "^0.61.4",
     "@types/react-test-renderer": "^16.9.2",
+    "babel-loader": "^8.0.6",
     "jest": "^25.1.0",
+    "prettier": "^1.19.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-native-web": "^0.12.0-rc.1",
     "react-scripts-ts": "^3.1.0",
     "react-test-renderer": "^16.12.0",
+    "rimraf": "^3.0.0",
     "rollup": "^1.29.1",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-typescript2": "^0.25.3",
     "ts-jest": "^25.0.0",
-    "typescript": "^3.7.5"
+    "ts-loader": "^6.2.1",
+    "typescript": "^3.7.5",
+    "yarn": "^1.21.1"
   },
   "peerDependencies": {
     "react": "^16.0.0",
@@ -37,8 +53,8 @@
     "preset": "ts-jest",
     "testEnvironment": "node"
   },
-
   "files": [
     "build"
-  ]
+  ],
+  "dependencies": {}
 }
