--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     "@storybook/addon-links": "^5.3.8",
     "@storybook/addons": "^5.3.8",
     "@storybook/react": "^5.3.8",
+    "@testing-library/jest-dom": "^5.0.2",
+    "@testing-library/react": "^9.4.0",
     "@types/jest": "^24.9.1",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
     "@types/react-native": "^0.61.4",
     "@types/react-test-renderer": "^16.9.2",
     "babel-loader": "^8.0.6",
+    "babel-plugin-module-resolver": "^4.0.0",
     "jest": "^25.1.0",
     "prettier": "^1.19.1",
     "react": "^16.12.0",
