--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.8.3",
+    "@rollup/plugin-typescript": "^2.1.0",
     "@storybook/addon-actions": "^5.3.8",
     "@storybook/addon-links": "^5.3.8",
     "@storybook/addons": "^5.3.8",
