--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "babel-loader": "^8.0.6",
     "babel-plugin-module-resolver": "^4.0.0",
     "jest": "^25.1.0",
+    "jest-environment-jsdom": "^25.1.0",
     "prettier": "^1.19.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-native": "^0.61.5",
     "react-native-web": "^0.12.0-rc.1",
     "react-scripts-ts": "^3.1.0",
     "react-test-renderer": "^16.12.0",
@@ -55,7 +57,9 @@
   },
   "jest": {
     "preset": "ts-jest",
-    "testEnvironment": "node"
+    "moduleNameMapper": {
+      "^react-native$": "react-native-web"
+    }
   },
   "files": [
     "build"
