--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build": "yarn clean && yarn roll ",
     "deploy": "yarn clean && yarn roll && yarn def && yarn test",
     "test": "jest",
-    "storybook": "start-storybook -p 6006",
+    "sb": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
   "devDependencies": {
