--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "outDir": "build",
     "module": "esnext",
     "target": "es5",
-    "lib": ["es5", "dom", "es2016", "es2017"],
+    "lib": ["ES5", "dom", "es2016", "es2017"],
     "sourceMap": true,
     "allowJs": false,
     "jsx": "react",
@@ -18,11 +18,12 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "baseUrl": ".",
+    "noEmit": false,
     "emitDeclarationOnly": true,
+    "skipLibCheck": true,
     "paths": {
       "react-native": ["react-native-web"]
-    },
-    "skipLibCheck": true
+    }
   },
   "include": ["src"],
   "exclude": ["node_modules", "build", "**/__tests__/**"]
