--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.8.3",
+    "@rollup/plugin-json": "^4.0.1",
     "@rollup/plugin-typescript": "^2.1.0",
     "@storybook/addon-actions": "^5.3.8",
     "@storybook/addon-links": "^5.3.8",
@@ -31,10 +32,13 @@
     "@types/react-dom": "^16.9.5",
     "@types/react-native": "^0.61.4",
     "@types/react-test-renderer": "^16.9.2",
+    "@types/styled-components": "^4.4.2",
     "babel-loader": "^8.0.6",
     "babel-plugin-module-resolver": "^4.0.0",
+    "babel-plugin-styled-components": "^1.10.6",
     "jest": "^25.1.0",
     "jest-environment-jsdom": "^25.1.0",
+    "jest-styled-components": "^7.0.0",
     "prettier": "^1.19.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -47,9 +51,11 @@
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-typescript2": "^0.25.3",
+    "styled-components": "^5.0.0",
     "ts-jest": "^25.0.0",
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.5",
+    "typescript-plugin-styled-components": "^1.4.4",
     "yarn": "^1.21.1"
   },
   "peerDependencies": {
