--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "babel-loader": "^8.0.6",
     "babel-plugin-module-resolver": "^4.0.0",
     "babel-plugin-styled-components": "^1.10.6",
+    "babel-preset-react-native": "^4.0.1",
     "jest": "^25.1.0",
     "jest-environment-jsdom": "^25.1.0",
     "jest-styled-components": "^7.0.0",
+    "metro-react-native-babel-preset": "^0.58.0",
     "prettier": "^1.19.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
