--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "roll": "rollup -c",
     "def": "tsc",
     "build": "yarn clean && yarn roll ",
-    "deploy": "yarn clean && yarn roll && yarn def && yarn test",
+    "deploy": "yarn test && yarn clean && yarn roll && yarn def",
     "test": "jest",
     "sb": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
@@ -46,6 +46,7 @@
     "react-dom": "^16.12.0",
     "react-native-web": "^0.12.0-rc.1",
     "react-scripts-ts": "^3.1.0",
+    "react-spring": "^8.0.27",
     "react-test-renderer": "^16.12.0",
     "rimraf": "^3.0.0",
     "rollup": "^1.29.1",
